# kinodynamic_motion_planning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
env/: moveItEnv.cpp
execs/: omplRRT.cpp
include/kdmp_ros/: moveItEnv.hpp  pandaMoveitInterface.hpp
kdmp/: CMakeLists.txt  CMakeLists.txt.hold2  package.xml
kdmp/launch/: omplTimePara.launch
kdmp/src/: rrtConnectTimePara.cpp
launch/: OmplRRT.launch  test_propogate.launch
msg/: PandaControlCmd.msg
nodes/: panda_edge_data_node.py
robot_interfaces/: pandaMoveitInterface.cpp
run/: CMakeLists.txt
run/execs/: omplRRT.cpp
src/: CMakeLists.txt
src/interfaces/: CmakeLists.txt
src/kdmp/: CMakeLists.txt
src/kdmp/include/: LSODA.h  RobotInterface.hpp  franka_model.h  kdmpUtils.hpp  pandaConstants.hpp  pandaControlSpace.hpp  pandaDirectedControlSampler.hpp  pandaGoal.hpp  pandaProblem.hpp  pandaSetup.hpp  pandaStatePropogator.hpp  pandaStateSpace.hpp  rigidBodyDynamics.hpp
src/kdmp/models/: CMakeLists.txt
src/kdmp/models/include/: rigidBodyDynamics.hpp
src/kdmp/models/src/: CoriolisMatrix.cpp  FrictionTorque.cpp  GravityVector.cpp  MassMatrix.cpp
src/kdmp/planners/: CMakeLists.txt
src/kdmp/planners/include/: rrtConnectTp.hpp  trajectory.hpp
src/kdmp/planners/src/: rrtConnectTp.cpp
src/kdmp/problems/: CMakeLists.txt
src/kdmp/problems/include/: RobotInterface.hpp  pandaGoal.hpp  pandaKDRRT.hpp  pandaMPWithOptimization.hpp  pandaMotion.hpp  pandaProblem.hpp  pandaSetup.hpp
src/kdmp/problems/src/: pandaGoal.cpp  pandaKDRRT.cpp  pandaMPWithOptimization.cpp  pandaMotion.cpp  pandaProblem.cpp  pandaSetup.cpp
src/kdmp/spaces/: CMakeLists.txt
src/kdmp/spaces/include/: pandaConstants.hpp  pandaControlSpace.hpp  pandaControlTorque.hpp  pandaDirectedControlSampler.hpp  pandaStatePropogator.hpp  pandaStateSpace.hpp
src/kdmp/spaces/src/: pandaControlSpace.cpp  pandaControlTorque.cpp  pandaDirectedControlSampler.cpp  pandaStatePropogator.cpp  pandaStateSpace.cpp
src/kdmp/src/: CoriolisMatrix.cpp  pandaControlSpace.cpp  pandaDirectedControlSampler.cpp  pandaProblem.cpp  pandaSetup.cpp  pandaStatePropogator.cpp  pandaStateSpace.cpp
test/: test_propogate.cpp
